--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,31 +1,8 @@
-default_install_hook_types: [pre-commit]
-default_stages: [pre-commit, pre-push]
-default_language_version:
-  python: python3.13
-
 repos:
-  - repo: https://github.com/astral-sh/uv-pre-commit
-    rev: 0.6.17
+  - repo: local
     hooks:
-      - id: uv-lock
-
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
-    hooks:
-      - id: check-yaml
-      - id: end-of-file-fixer
-      - id: trailing-whitespace
-
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.11.7
-    hooks:
-      - id: ruff
-        types_or: [ python, pyi ]
-        args: [ --fix ]
-      - id: ruff-format
-        types_or: [ python, pyi ]
-
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
-    hooks:
-      - id: check-added-large-files
+      - id: run-make
+        name: Run Make
+        entry: /usr/bin/make
+        language: script
+        args: ["all"]
