--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,19 @@
 repos:
   - repo: local
     hooks:
-      - id: run-make
-        name: Run Make
+      - id: run-make-fmt
+        name: Formatter
         entry: /usr/bin/make
         language: script
-        args: ["all"]
+        args: ["fmt"]
+      - id: run-make-lint
+        name: Linter
+        entry: /usr/bin/make
+        language: script
+        args: ["lint"]
+      - id: run-make-test
+        name: Tests
+        entry: /usr/bin/make
+        language: script
+        args: ["test"]
+        require_serial: true
